[JAEGER] Fixed assert-botch in tracer integration (bug 587431).